--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -392,10 +392,8 @@ footer {
     background-image: url({{ site.footer-img | relative_url }});
     background-attachment: fixed;
   {% endif %}
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: sticky;
+  top: 100%;
 }
 
 footer p.text-muted {
